commit al master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
-	<p>Blog post</p>
+	<h1>Blog post</h1>
+	<p>prueba</p>
 </body>
 </html>
