agregando cabecera a la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
-
+<p>le agrego cabecera</p>
 	<h1>Blog post</h1>
 	<p>prueba master para unir con cabecera</p>
 </body>
