--- a/blogpost.html
+++ b/blogpost.html
@@ -5,8 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
-<p>le agrego cabecera</p>
+<p>le agrego cabecera a master para que de problema</p>
 	<h1>Blog post</h1>
 	<p>prueba master para unir con cabecera</p>
+	<p>parrafo adicional</p>
 </body>
 </html>
