cambie el titulo desde github
porque pude

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<p>le agrego cabecera para que de conflicto</p>
+<p>le agrego cabecera para que de conflicto ya desde github</p>
 
 	<h1>Blog post</h1>
 	<p>prueba master para unir con cabecera</p>
